--- a/investors/index.html
+++ b/investors/index.html
@@ -633,7 +633,7 @@
           </div>
           <div class="social-menu-items">
             <a
-              href="https://x.com/"
+              href="https://x.com/str8fire_erc"
               target="_blank"
               class="social-icon-link w-inline-block"
               ><svg
@@ -695,7 +695,7 @@
                   fill="currentColor"
                 ></path></svg></a
             ><a
-              href="https://t.me/"
+              href="https://t.me/str8fire_erc"
               target="_blank"
               class="social-icon-link w-inline-block"
               ><svg
@@ -2196,7 +2196,7 @@
               <div class="prefooter-row-socials">
                 <div class="footer-socials">
                   <a
-                    href="https://x.com/"
+                    href="https://x.com/str8fire_erc"
                     target="_blank"
                     class="footer-social-link w-inline-block"
                     ><div class="footer-social-bg"></div>
@@ -2218,7 +2218,7 @@
                     <div class="link-corner left-bottom"></div>
                     <div class="link-border"></div></a
                   ><a
-                    href="https://t.me/"
+                    href="https://t.me/str8fire_erc"
                     target="_blank"
                     class="footer-social-link w-inline-block"
                     ><div class="footer-social-bg"></div>
