--- a/ips/index.html
+++ b/ips/index.html
@@ -630,7 +630,7 @@
           </div>
           <div class="social-menu-items">
             <a
-              href="https://x.com/"
+              href="https://x.com/str8fire_erc"
               target="_blank"
               class="social-icon-link w-inline-block"
               ><svg
@@ -692,7 +692,7 @@
                   fill="currentColor"
                 ></path></svg></a
             ><a
-              href="https://t.me/"
+              href="https://t.me/str8fire_erc"
               target="_blank"
               class="social-icon-link w-inline-block"
               ><svg
@@ -3130,7 +3130,7 @@
               <div class="prefooter-row-socials">
                 <div class="footer-socials">
                   <a
-                    href="https://x.com/"
+                    href="https://x.com/str8fire_erc"
                     target="_blank"
                     class="footer-social-link w-inline-block"
                     ><div class="footer-social-bg"></div>
@@ -3152,7 +3152,7 @@
                     <div class="link-corner left-bottom"></div>
                     <div class="link-border"></div></a
                   ><a
-                    href="https://t.me/"
+                    href="https://t.me/str8fire_erc"
                     target="_blank"
                     class="footer-social-link w-inline-block"
                     ><div class="footer-social-bg"></div>
