--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,16 @@
               ><span class="link-span">Chart</span
               ><span class="link-icon scale-min-1">↵</span>
               </a
-            ></div>
+            ><a
+            data-hover-scramble="0.0125"
+            data-transition-scramble="0.0125"
+            href="https://www.dextools.io/app/en/ether/pair-explorer/0x0000000000000000000000000000000000000000"
+            target="_blank"
+            class="link w-inline-block"
+            ><span class="link-span">Chart</span
+            ><span class="link-icon scale-min-1">↵</span>
+            </a
+          ></div>
               </div>
             </div>
             <div class="section-about">
