--- a/index.html
+++ b/index.html
@@ -1121,10 +1121,10 @@
             ><a
             data-hover-scramble="0.0125"
             data-transition-scramble="0.0125"
-            href="https://www.dextools.io/app/en/ether/pair-explorer/0x0000000000000000000000000000000000000000"
+            href="https://docs.str8fire.pro"
             target="_blank"
             class="link w-inline-block"
-            ><span class="link-span">Chart</span
+            ><span class="link-span">Whitepaper</span
             ><span class="link-icon scale-min-1">↵</span>
             </a
           ></div>
