--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
           </div>
           <div class="social-menu-items">
             <a
-              href="https://x.com/str8fire_erc"
+              href="https://x.com/str8fire_erc20"
               target="_blank"
               class="social-icon-link w-inline-block"
               ><svg
@@ -4522,7 +4522,7 @@
               <div class="prefooter-row-socials">
                 <div class="footer-socials">
                   <a
-                    href="https://x.com/str8fire_erc"
+                    href="https://x.com/str8fire_erc20"
                     target="_blank"
                     class="footer-social-link w-inline-block"
                     ><div class="footer-social-bg"></div>
